--- a/Resources/LaunchScreen.storyboard
+++ b/Resources/LaunchScreen.storyboard
@@ -14,7 +14,7 @@
         <scene sceneID="5Zv-Bw-ur3">
             <objects>
                 <navigationController id="Uvc-40-doM" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" largeTitles="YES" id="XWc-6C-eSs">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" shadowImage="UIImage()" largeTitles="YES" id="XWc-6C-eSs">
                         <rect key="frame" x="0.0" y="44" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -42,13 +42,13 @@
                     <navigationItem key="navigationItem" title="Boards" leftItemsSupplementBackButton="YES" largeTitleDisplayMode="always" id="hhH-K0-yxn">
                         <rightBarButtonItems>
                             <barButtonItem systemItem="add" id="sb4-i0-ZWt">
-                                <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" white="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </barButtonItem>
                             <barButtonItem image="assetQr" id="2r1-aj-wsi">
-                                <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" white="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </barButtonItem>
                             <barButtonItem image="assetEdit" id="cvQ-3Y-9e9">
-                                <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" white="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </barButtonItem>
                         </rightBarButtonItems>
                     </navigationItem>
@@ -59,7 +59,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="assetEdit" width="21" height="21"/>
+        <image name="UIImage()" width="16" height="16"/>
+        <image name="assetEdit" width="19" height="19"/>
         <image name="assetQr" width="17" height="17"/>
     </resources>
 </document>
